Fix emoji alignment

--- a/_sass/_objects.scss
+++ b/_sass/_objects.scss
@@ -45,7 +45,6 @@
   line-height: 1;
   font-style: normal;
   display: inline-block;
-  vertical-align: middle;
   font-family: 'Segoe UI Emoji';
 }
 
